src/Sample/src/org/csystem/app/App.java
package org.csystem.app;

import org.csystem.util.array.ArrayUtil;
import org.csystem.util.numeric.NumberUtil;

class App {
	public static void main(String[] args)
	{
		Math m = new Math() //error
		ArrayUtil au = new ArrayUtil(); //error
		NumberUtil nu = new NumberUtil(); //error
	}
}
